--- a/resources/meson.build
+++ b/resources/meson.build
@@ -6,6 +6,6 @@ resources_files += files(
 if copt_platform == 'win'
 	powder_files += windows_mod.compile_resources(
 		'powder-res.rc',
-		depend_files: resources_files,
+		depend_files: [ resources_files, 'resource.h' ],
 	)
 endif
