Update / rearrange .gitignore
Tried to categories everything but some stuff I'm not sure where it came from.
Added .kdev4 (kdevelop) files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,47 @@
-*nohup.out
+# Misc extensions, system files
+*.zip
+*.txt
+*.gz
+*.out
+*.sh
+*.py
+*.png
+*.ppm
 *.swp
+*~
+.DS_Store
+
+# Build files
+build*/*
 *.o
 *.exe
-*.user
+*.dmg
 *.dll
 *.a
 *.la
-*~
+
+# Legacy SCons files
+config.log
+*.sconsign.dblite
+*.sconf_temp
+/site_scons/
+/generated/
+
+# User data
+/stamps/
+/Saves/
+/scripts/
+/recordings/
+*.def
 *.pref
 *.lua
-*.sh
-stdout.txt
-stderr.txt
-build*/*
-stamps/*
-Saves/*
-scripts/*
-generated/*
-includes/*
-recordings/
-font/*
-Debug/*
-Release/*
-generate
-Makefile.me
-*.xcodeproj
-.DS_Store
-*.plist
-*.lproj
+screenshot_*
+
+# Visual studio
+/Debug/
+/Release/
+/includes/
 *.vcxproj*
-*.opensdf
-*.sdf
 *.user
 *.filter
 *.sln
@@ -50,26 +61,33 @@ Makefile.me
 *.unsuccessfulbuild
 *.pdb
 *.db
-*.sublime-*
-*.project
-*.cproject
-*.settings
-*.cbp
-*.layout
+
+# QtCreator / KDevelop
+*.user
 *.config
 *.creator*
 *.cflags
 *.cxxflags
 *.files
 *.includes
-config.log
-*.sconsign.dblite
-*.sconf_temp
-*.gch
-*.pyc
-site_scons/site_tools/mfprogram/*.pyc
-site_scons/site_tools/gch/*.pyc
+*.kdev4
+/.kdev4
+
+# Other IDEs / misc
 .vscode/
 .vs/
+*.sublime-*
+*.project
+*.cproject
+*.settings
+*.cbp
+*.layout
+*.gch
+*.pyc
+*.xcodeproj
+*.plist
+*.lproj
+*.opensdf
+*.sdf
+/font/
 
-screenshot_*
