Remove LuaSocket, add new socket API backed by libcurl

--- a/src/config/meson.build
+++ b/src/config/meson.build
@@ -1,3 +1,9 @@
-subdir('powder')
-subdir('render')
-subdir('font')
+if get_option('build_powder')
+	subdir('powder')
+endif
+if get_option('build_render')
+	subdir('render')
+endif
+if get_option('build_font')
+	subdir('font')
+endif
