--- a/meson_options.txt
+++ b/meson_options.txt
@@ -165,3 +165,9 @@ option(
 	value: '',
 	description: 'Update server, only used by snapshots and mods, see \'snapshot_id\' and \'mod_id\''
 )
+option(
+	'workaround_gcc_no_pie',
+	type: 'boolean',
+	value: true,
+	description: 'Pass -no-pie to gcc manually to work around meson\'s -Db_pie=false doing nothing'
+)
