Freeze build step ubuntu runner at 20.04
This will hopefully also freeze the minimum required glibc version at 2.29.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -79,7 +79,7 @@ jobs:
 #########################################################
         include:
           - platform_short: lin
-            os: ubuntu-latest
+            os: ubuntu-20.04
             suffix: ''
           - platform_short: mac
             os: macos-latest
