Meat and life system

--- a/src/simulation/elements/meson.build
+++ b/src/simulation/elements/meson.build
@@ -199,6 +199,7 @@ simulation_elem_ids = [
         [ 'BLD',   197 ],
 	[ 'DT',   198 ],
 	[ 'LUNG',   199 ],
+	[ 'MEAT',   200 ],
 ]
 
 simulation_elem_src = []
