--- a/src/simulation/elements/meson.build
+++ b/src/simulation/elements/meson.build
@@ -196,10 +196,14 @@ simulation_elem_ids = [
 	[ 'NIHM',   194 ],
 	[ 'GGOO',   195 ],
 	[ 'RGOO',   196 ],
-        [ 'BLD',   197 ],
+    [ 'BLD',   197 ],
 	[ 'DT',   198 ],
 	[ 'LUNG',   199 ],
 	[ 'MEAT',   200 ],
+	[ 'BVES',   201 ],
+	[ 'SKINE',   202 ],
+	[ 'SKIND',   203 ],
+	[ 'SKINS',   204 ],
 ]
 
 simulation_elem_src = []
