Added poison to build file

--- a/src/simulation/elements/meson.build
+++ b/src/simulation/elements/meson.build
@@ -205,6 +205,7 @@ simulation_elem_ids = [
 	[ 'SKIND',   203 ],
 	[ 'SKINS',   204 ],
 	[ 'TUMOR',   205 ],
+	[ 'PSN',   206 ],
 ]
 
 simulation_elem_src = []
