--- a/meson.build
+++ b/meson.build
@@ -53,7 +53,7 @@ endif
 
 uopt_static = get_option('static')
 use_tpt_libs = 'no'
-tpt_libs_vtag = 'v20210822114001'
+tpt_libs_vtag = 'v20211022224519'
 if uopt_static == 'system'
 	if copt_platform == 'win'
 		error('no way to find static system libraries on windows')
@@ -67,22 +67,21 @@ else
 endif
 if use_tpt_libs != 'no'
 	nope = false
-	if copt_architecture == 'i686' and (copt_platform != 'win' or copt_compiler != 'msvc')
+	if copt_architecture == 'i686' and not copt_msvc
 		nope = true
 	endif
 	if copt_architecture == 'x86_64' and (copt_platform == 'lin' or copt_platform == 'mac') and copt_compiler != 'gcc'
 		nope = true
 	endif
-	if copt_architecture == 'x86_64' and copt_platform == 'win' and copt_compiler == 'gcc'
-		nope = true
+	quad_compiler = copt_compiler
+	if copt_platform == 'win' and copt_compiler == 'gcc'
+		quad_compiler = 'mingw'
+		if get_option('b_lto')
+			error('mingw does not like static + lto, you will have to disable this error if you want to proceed')
+		endif
 	endif
 	if nope
-		error('no prebuilt @0@-@1@-@2@-@3@ libraries are currently provided'.format(copt_architecture, copt_platform, copt_compiler, use_tpt_libs))
-	endif
-	quad_compiler = copt_compiler
-	if use_tpt_libs == 'dynamic' and copt_platform == 'win'
-		# DLLs should be compatible with anything, right?
-		quad_compiler = 'msvc'
+		error('no prebuilt @0@-@1@-@2@-@3@ libraries are currently provided'.format(copt_architecture, copt_platform, quad_compiler, use_tpt_libs))
 	endif
 	tpt_libs = subproject('tpt-libs-prebuilt-@0@-@1@-@2@-@3@-@4@'.format(copt_architecture, copt_platform, quad_compiler, use_tpt_libs, tpt_libs_vtag))
 endif
@@ -199,6 +198,15 @@ else
 		endif
 		if uopt_native
 			args_ccomp += [ '-march=native' ]
+		endif
+	endif
+	if copt_platform == 'win'
+		args_ccomp += [
+			'-DUNICODE',
+			'-D_UNICODE',
+		]
+		if uopt_static != 'none'
+			project_link_args = [ '-static', '-static-libgcc', '-static-libstdc++' ]
 		endif
 	endif
 	if not get_option('debug')
