Add support for MacOS on ARM
Also build with real -no-pie on ghactions, and fix SDL include directories (it's probably blind luck that they worked correctly on most systems).

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,6 @@
 project('the-powder-toy', [ 'c', 'cpp' ], version: 'the.cake.is.a.lie', default_options: [
 	'cpp_std=c++17',
+	'build.cpp_std=c++17', # used when cross-compiling
 ])
 
 to_array = generator(
@@ -31,6 +32,8 @@ if host_machine.cpu_family() in [ 'x86_64' ]
 	copt_architecture = 'x86_64'
 elif host_machine.cpu_family() in [ 'x86' ]
 	copt_architecture = 'i686'
+elif host_machine.cpu_family() in [ 'aarch64' ]
+	copt_architecture = 'arm64'
 else
 	warning('unsupported architecture: ' + host_machine.cpu_family() + '; you are on your own')
 	copt_architecture = 'i686'
@@ -53,7 +56,7 @@ endif
 
 uopt_static = get_option('static')
 use_tpt_libs = 'no'
-tpt_libs_vtag = 'v20211224205921'
+tpt_libs_vtag = 'v20220217170412'
 if uopt_static == 'system'
 	if copt_platform == 'win'
 		error('no way to find static system libraries on windows')
@@ -71,6 +74,9 @@ if use_tpt_libs != 'no'
 		nope = true
 	endif
 	if copt_architecture == 'x86_64' and (copt_platform == 'lin' or copt_platform == 'mac') and copt_compiler != 'gcc'
+		nope = true
+	endif
+	if copt_architecture == 'arm64' and copt_platform != 'mac'
 		nope = true
 	endif
 	quad_compiler = copt_compiler
@@ -221,8 +227,12 @@ else
 		args_ccomp += [ '-mmacosx-version-min=10.9' ]
 		project_link_args += [ '-mmacosx-version-min=10.9' ]
 	endif
-	if copt_platform == 'lin' and not get_option('b_pie') and get_option('workaround_gcc_no_pie') # nice one, meson
-		project_link_args += [ '-no-pie' ]
+	if not get_option('b_pie') and get_option('workaround_gcc_no_pie') # nice one, meson
+		if cpp_compiler.get_id() in [ 'clang' ]
+			project_link_args += [ '-Wl,-no_pie' ]
+		else
+			project_link_args += [ '-no-pie' ]
+		endif
 	endif
 	project_c_args += args_ccomp
 	project_cpp_args += args_ccomp + [ '-Wno-invalid-offsetof' ]
@@ -250,7 +260,7 @@ elif copt_platform == 'lin'
 	endif
 endif
 
-if copt_platform == 'mac' and uopt_lua == 'luajit'
+if copt_platform == 'mac' and uopt_lua == 'luajit' and copt_architecture != 'arm64'
 	project_link_args += [
 		'-pagezero_size', '10000',
 		'-image_base', '100000000',
@@ -310,7 +320,7 @@ if get_option('build_powder')
 		include_directories: [ project_inc, powder_inc ],
 		c_args: project_c_args,
 		cpp_args: project_cpp_args,
-		gui_app: true,
+		gui_app: not get_option('debug'),
 		link_args: project_link_args,
 		dependencies: powder_deps,
 	)
@@ -347,7 +357,6 @@ if get_option('build_font')
 		include_directories: [ project_inc, font_inc ],
 		c_args: project_c_args,
 		cpp_args: project_cpp_args,
-		gui_app: true,
 		link_args: project_link_args,
 		dependencies: font_deps,
 	)
